# Omo-Koda2

./: .dockerignore  .env.example  .gitignore  256---65536  Audit phase  Birth Certificate  Cargo.toml  Dockerfile  Droidclaw  ECOSYSTEM_REPOS.md  Execute  FOUNDATION.md  First todo  First_todo_full.md  Makefile  New file  Next  README.md  Read file  Repos to look at  Riemann Zeta  Ritual Codex  T O C  TODO.md  docker-compose.yml  simulation_report.json  ỌṢÓ & Ọ̀ṢỌ́
.devcontainer/: devcontainer.json  setup.sh
Bipon39-Rust/: Cargo.toml
Ifascript/: Cargo.toml
_archive/: README.md
bipon39-stub/: Cargo.toml
docs/: 256---65536.md  BIRTH_PIPELINE.md  CONNECTION_MAP_V2.md  CORRECTIONS.md  ECOSYSTEM_MAP.md  ECOSYSTEM_REPOS.md  FOUNDATION.md  Finish this.md  First Citizen.md  First todo.md  First_todo_full.md  GLYPHINDEX_INTEGRATION.md  MASTER_COSMOLOGY.md  New file.md  Next.md  OSOVM_CODEX.md  Ritual Codex.md  TODO.md  UNIFIED_ARCHITECTURE.md  WAGGLE_POWERS.md  agent-capabilities.md  architecture.md  mission.md  stigmergy-protocol.md  synthesis.md  Ọ̀rúnmìlà.md
ifascript-stub/: Cargo.toml
nautilus_integration/: Cargo.toml
nautilus_integration/src/: attestation.rs  handshake.rs  lib.rs  sealed_memory.rs
nist_entropy/: Cargo.toml
nist_entropy/src/: lib.rs  report.rs  validator.rs
omokoda-cli/: Cargo.toml
omokoda-cli/src/: main.rs
omokoda-cli/src/tui/: app.rs  events.rs  mod.rs  renderer.rs
omokoda-cli/src/tui/widgets/: chat_view.rs  header.rs  input_bar.rs  mod.rs  slash_menu.rs  status_panel.rs
omokoda-clojure/: obatala.clj
omokoda-core/: .gitignore  Cargo.toml  build.rs
omokoda-core/scripts/: analyze_repo.py  boot_and_discover.py  playwright_discover.js  sandbox_smoke.py  transform_repo.py
omokoda-core/src/: agents.rs  background.rs  behavioral.rs  bootstrap.rs  compact.rs  config.rs  divination.rs  dream.rs  economics.rs  emotion.rs  error.rs  intent.rs  interpreter.rs  justice.rs  lib.rs  main_loop.rs  mcp.rs  mesh_tools.rs  onchain.rs  parser.rs  permissions.rs  prompt.rs  providers.rs  query.rs  receipt.rs  reputation.rs  rhythm.rs  sandbox.rs  server.rs  session.rs  skills.rs  tools.rs  usage.rs  vault.rs
omokoda-core/src/bus/: clients.rs  http_clients.rs  mod.rs  sango.rs  zangbeto.rs
omokoda-core/src/clients/: http.rs  mod.rs  stubs.rs
omokoda-core/src/execution/: bash_validation.rs  deny_list.rs  hook_registry.rs  hooks.rs  mod.rs  no_resume.rs  permission_enforcer.rs  prompter.rs  python_hook.rs  risk_classifier.rs
omokoda-core/src/gates/: cause_effect.rs  correspondence.rs  gender.rs  mentalism.rs  mod.rs  polarity.rs  rhythm.rs  vibration.rs
omokoda-core/src/identity/: ase.rs  bipon39.rs  buzz.rs  cloak.rs  duress.rs  merkle.rs  mod.rs  oauth.rs  odu.rs  pet.rs  safety.rs  user.rs  vault.rs  wallet.rs
omokoda-core/src/justice/: busy_beaver.rs  hermetic.rs  hermetic_tests.rs  mod.rs  tier.rs
omokoda-core/src/koodu/: friday.json  monday.json  saturday.json  sunday.json  thursday.json  tuesday.json  wednesday.json
omokoda-core/src/lsp/: mod.rs
omokoda-core/src/memory/: dag.rs  engine.rs  glyph_memory.rs  larql_query.rs  memdir.rs  mod.rs  odu_keys.rs  reflection.rs  router.rs  seal_bridge.rs  soma.rs  tee.rs  walrus.rs
omokoda-core/src/memory_vault/: handlers.rs  mod.rs  types.rs  vault.rs
omokoda-core/src/mesh/: mod.rs  probation.rs  trust_graph.rs
omokoda-core/src/plugins/: agent.rs  command.rs  config_loader.rs  discovery.rs  hook_manifest.rs  manifest.rs  mcp.rs  mod.rs  output_style.rs  registry.rs  rule_engine.rs  settings.rs  skill.rs
omokoda-core/src/policy/: capability.rs  hooks.rs  mod.rs  security.rs
omokoda-core/src/providers/: aliases.rs  streaming.rs
omokoda-core/src/receipt/: act_receipt.rs  mod.rs
omokoda-core/src/steward/: constitution.rs  dispatch.rs  gatekeeper.rs  iris.rs  mod.rs  privacy.rs  soul.rs  twelfth_face.rs
omokoda-core/src/tasks/: mod.rs  scheduler.rs  types.rs
omokoda-core/src/tools/: config_tool.rs  file_ops.rs  mesh_tools.rs  mod.rs  python_bridge.rs  repl.rs  retry.rs  skillforge.rs  skillforge_bus.rs  skills.rs  sovereign.rs  streaming.rs  structured_output.rs  todo.rs  tool_definitions.rs  tor_tool.rs  validation.rs  wallet_tools.rs  walrus_tool.rs  web.rs  zero_tool.rs
omokoda-core/src/waggle/: mod.rs  taboo_cap.rs
omokoda-core/tests/: e2e_tests.rs  identity_tests.rs  integration_tests.rs  interpreter_tests.rs  justice_tests.rs  natural_think_tests.rs  parser_composition_tests.rs  parser_overblocking_tests.rs  parser_tests.rs  persistence_tests.rs  privacy_memory_tests.rs  privacy_tests.rs  provider_tests.rs  rack_tests.rs  receipt_tests.rs  reputation_curve_tests.rs  sandbox_tests.rs  session_tests.rs  skillforge_e2e_tests.rs  skillforge_hotadd_tests.rs  slash_command_tests.rs  steward_audit_tests.rs  synapse_tests.rs  tier_gate_tests.rs  tool_registry_tests.rs
omokoda-core/tests/fixtures/: glyph-graph-snapshot.json
omokoda-elixir/: mix.exs
omokoda-frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
omokoda-go/: go.mod
omokoda-hermetic/: Cargo.toml
omokoda-hermetic/src/: fractal.rs  lib.rs  network_guard.rs  plane.rs  rule_engine.rs  safety.rs  spiral.rs
omokoda-hermetic/src/entropy/: mod.rs  odu.rs
omokoda-hermetic/src/flow/: mod.rs  resonance.rs  tension.rs  tone.rs
omokoda-hermetic/src/justice/: ebo.rs  mod.rs  sabbath.rs
omokoda-hermetic/src/persona/: engine.rs  mod.rs
omokoda-hermetic/src/wisdom/: consensus.rs  ensemble.rs  mod.rs
omokoda-hermetic/tests/: hermetic_tests.rs
omokoda-julia/: Project.toml  build.jl
omokoda-lisp/: README.md  consent_rules.lisp  (+5 more)
omokoda-mesh/: Cargo.toml
omokoda-mesh/src/: lib.rs  negotiation.rs  resource.rs  router.rs  state.rs  tools.rs  trust.rs  types.rs
(+275 files in other folders)
