[package]
name = "nautilus_integration"
version = "0.1.0"
edition = "2021"
# NOT a workspace member — kept standalone to avoid requiring the Nautilus SDK
# in all CI environments. Add to workspace Cargo.toml once the SDK is vendored.

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hkdf = "0.12"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
thiserror = "1.0"
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
# No extra test deps needed
