[package]
name = "nist_entropy"
version = "0.1.0"
edition = "2021"
# NOT a workspace member — pure Rust implementation of NIST SP 800-22 tests.
# No dieharder C library required for the tests implemented here.
# Add to workspace Cargo.toml once vendored dieharder is wired up.

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
thiserror = "1.0"
