[package]
name = "omokoda-cli"
version = "0.1.0"
edition = "2021"
default-run = "omokoda"

[[bin]]
name = "omokoda"
path = "src/main.rs"

[dependencies]
omokoda-core = { path = "../omokoda-core" }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
rustyline = "14.0"
colored = "2.1"
anyhow = "1.0"
