[package]
name = "omokoda-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.8"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
sha3 = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
chacha20poly1305 = "0.10"
hex = "0.4"
rand = "0.8"
wasm-bindgen = "0.2"
wasmtime = "13.0"
wasmtime-wasi = "13.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
async-trait = "0.1"
urlencoding = "2.1"
ed25519-dalek = "2.0"
bipon39 = { path = "../Bipon39-Rust" }
omokoda-hermetic = { path = "../omokoda-hermetic" }
glob = "0.3"
walkdir = "2.3"
regex = "1.5"
zeroize = { version = "1.8", features = ["derive"] }
thiserror = "1.0"
prost = "0.14.3"
prost-derive = "0.14.3"
protobuf-codegen = "3.7.2"
serde_yaml = "0.9"
jsonschema = "0.17"
uuid = { version = "1.0", features = ["v4"] }
axum = { version = "0.7", features = ["json", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
zip = "2"

[dev-dependencies]
criterion = "0.5"
httpmock = "0.6"
tempfile = "3.0"
wat = "1.0"

[build-dependencies]
prost-build = "0.14.3"
protoc-bin-vendored = "3.2.0"
