[package]
name = "omokoda-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nautilus_integration = { path = "../nautilus_integration" }
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.8"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
sha3 = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
chacha20poly1305 = "0.10"
hex = "0.4"
rand = "0.8"
wasm-bindgen = "0.2"
wasmtime = "13.0"
wasmtime-wasi = "13.0"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["json", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
async-trait = "0.1"
urlencoding = "2.1"
ed25519-dalek = "2.0"
# Real crates (public). Pinned to the audited main commits; build against the
# actual BIPON39 / IfáScript behavior, not CI stubs (the former bipon39-stub /
# ifascript-stub mirrored only the API shape and have since been removed).
bipon39 = { git = "https://github.com/cryptonomicsed-byte/BIPON39", rev = "9d62b4de8e5b78199a1534ab7b45e08612620380" }
ifascript = { git = "https://github.com/cryptonomicsed-byte/If-Script", rev = "53eea72afc23c6618594c59bb1007b03db5774d9" }
zangbeto-enforcement = { path = "../zangbeto-stub" }
omokoda-mesh = { path = "../omokoda-mesh" }
omokoda-hermetic = { path = "../omokoda-hermetic" }
glob = "0.3"
walkdir = "2.3"
regex = "1.5"
zeroize = { version = "1.8", features = ["derive"] }
thiserror = "1.0"
prost = "0.14.3"
prost-derive = "0.14.3"
protobuf-codegen = "3.7.2"
serde_yaml = "0.9"
jsonschema = "0.17"
uuid = { version = "1.0", features = ["v4"] }
zip = "2"

[dev-dependencies]
criterion = "0.5"
httpmock = "0.6"
tempfile = "3.0"
wat = "1.0"

[build-dependencies]
prost-build = "0.14.3"
protoc-bin-vendored = "3.2.0"
