[package]
name = "omokoda-mesh"
version = "0.1.0"
edition = "2021"
description = "Block Mesh spatial multi-agent topology layer for Ọmọ Kọ́dà"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
ed25519-dalek = "2.0"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
